Fix whitespace formatting for citations which span multiple lines.

--- a/alert/assets/media/css/override.css
+++ b/alert/assets/media/css/override.css
@@ -164,7 +164,8 @@ nav ul li {
 
 /* New case view styling, including citations */
 #text pre, .citation { 
-    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+    white-space: pre;
 }
 
 /* cited by sidebar list styling */
